--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Picture-in-Picture Extension (by Google)",
-  "description": "Watch video using Picture-in-Picture",
+  "name": "Picture-in-Picture",
+  "description": "Watch videos using Picture-in-Picture",
   "version": "1.10",
   "icons": {
     "128": "assets/icon128.png"
