--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Simple Picture-in-Picture",
-  "description": "Watch videos using Picture-in-Picture; built for Chrome dark mode",
+  "description": "Watch videos using Picture-in-Picture; built for Chrome dark mode - created by github/sleepiie",
   "version": "1.0.2",
   "icons": {
     "128": "assets/icon128.png"
