--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Simple Picture-in-Picture",
-  "description": "Watch videos using Picture-in-Picture; built for Chrome dark mode - created by github/sleepiie",
-  "version": "1.0.2",
+  "description": "Watch videos using Picture-in-Picture; built for Chrome dark mode",
+  "version": "1.0.1",
   "icons": {
     "128": "assets/icon128.png"
   },
