--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,3 +28,9 @@ theme:
     text: Roboto
     code: Roboto Mono
   favicon: assets/favicon.ico
+
+nav:
+  - Home: index.md
+  - Changelog: changelod.md
+  - Source code: source.md
+  - How to use Simple-PiP with other apps: other-apps.md
